Fix OpenAI API key access in components

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,9 @@ VITE_FIREBASE_VAPID_KEY=your_vapid_key_here
 # Environment
 VITE_APP_ENV=development
 
+# OpenAI API Key for QuizTime and ChatFlashGPT
+VITE_OPENAI_API_KEY=your_openai_api_key_here
+
 # EXEMPLO de como deve ficar (substitua pelos seus valores):
 # VITE_FIREBASE_API_KEY=AIzaSyBxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # VITE_FIREBASE_AUTH_DOMAIN=app-heitor.firebaseapp.com
